syntax = "proto3";

package cosmos.evm.vm.v1;

// EVM Log from transaction receipt
message Log {
  string address = 1;
  repeated string topics = 2;
  bytes data = 3;
  uint64 block_number = 4;
  string tx_hash = 5;
  uint64 tx_index = 6;
  string block_hash = 7;
  uint64 index = 8;
  bool removed = 9;
}

// Response from MsgEthereumTx execution
message MsgEthereumTxResponse {
  string hash = 1;
  repeated Log logs = 2;
  bytes ret = 3;
  string vm_error = 4;
  uint64 gas_used = 5;
}

// Cosmos SDK TxMsgData wrapper
message TxMsgData {
  repeated bytes data = 1;  // deprecated
  repeated MsgResponse msg_responses = 2;
}

message MsgResponse {
  string type_url = 1;
  bytes value = 2;
}
